<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gameConfigSurvivalConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/select_continents_to_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectContinentsTv"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"/>

        <com.google.android.material.chip.ChipGroup
                android:theme="@style/Theme.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/continentsSurvChipGroup"
                app:layout_constraintTop_toBottomOf="@+id/selectContinentsTv"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

            <TableLayout android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center">

                <TableRow android:gravity="center"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/europeSurvChip" android:text="@string/europe"
                            app:checkedIconVisible="false"/>
                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/southAmericaSurvChip" android:text="@string/southAmerica"
                            app:checkedIconVisible="false"/>
                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/australiaSurvChip" android:text="@string/australia"
                            app:checkedIconVisible="false" />
                </TableRow>

                <TableRow android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center">
                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/africaSurvChip" android:text="@string/africa"
                            app:checkedIconVisible="false" />
                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/asiaSurvChip" android:text="@string/asia"
                            app:checkedIconVisible="false" />
                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/northAmericaSurvChip" android:text="@string/northAmerica"
                            app:checkedIconVisible="false"/>

                </TableRow>

                <TableRow android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center">

                    <com.google.android.material.chip.Chip
                            style="@style/Chip"
                            android:id="@+id/allContinentsSurvChip" android:text="@string/all_continents"
                            app:checkedIconVisible="true"/>

                </TableRow>
            </TableLayout>
        </com.google.android.material.chip.ChipGroup>

        <TextView
                android:text="@string/select_countries_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectCountriesNumberTv"
                android:padding="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/continentsSurvChipGroup"/>

        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/countriesNumberSeekBar"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectCountriesNumberTv"
                android:visibility="invisible"/>

        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectedCountriesTV"
                app:layout_constraintTop_toBottomOf="@+id/countriesNumberSeekBar"
                android:padding="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeLimitTv"
                app:layout_constraintTop_toBottomOf="@+id/selectedCountriesTV"
                android:padding="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"/>

        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timeLimitSeekBar"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeLimitTv"
                android:visibility="invisible"
                android:max="95"/>

        <TextView
                android:text="@string/select_time_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectTimeLimitTv"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/timeLimitSeekBar"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"/>


        <Button
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/gameConfigSurvPlayBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/timeLimitTv"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>